--- a/css/d.css
+++ b/css/d.css
@@ -6,3 +6,6 @@ input,select{width:50%}
 input[type=checkbox]{width:5%;zoom:1.5}
 form{background-color: green;padding:3%}
 html {text-align: center;}
+input[type="radio"] {
+  margin-right: 0;
+}
