--- a/css/d.css
+++ b/css/d.css
@@ -3,12 +3,12 @@ body{width:70%;padding-left:15%;padding-right:15%}
 body,input,select,label{font-size:2vw}
 h3{font-size:3vw}
 select{width:50%}
-input{width:10%}
+input{width:18%}
 input[type=checkbox]{width:5%;zoom:1.5}
 form{background-color: green;padding:3%}
 html {text-align: center;}
 input[type="radio"] {
   margin-right: 0;
 }
-.radioDiv {text-align: left;}
-.checkboxDiv {text-align: left;}
+.radioDiv {text-align: center;}
+.checkboxDiv {text-align: center;}
