--- a/css/d.css
+++ b/css/d.css
@@ -10,5 +10,5 @@ html {text-align: center;}
 input[type="radio"] {
   margin-right: 0;
 }
-.radioDiv {text-align: center;}
-.checkboxDiv {text-align: center;}
+.radioDiv {text-align: left;}
+.checkboxDiv {text-align: left;}
