--- a/css/m.css
+++ b/css/m.css
@@ -2,7 +2,13 @@ body,html{margin:0px}
 body{width:70%;padding-left:15%;padding-right:15%}
 body,input,select,label{font-size:2vw}
 h3{font-size:3vw}
-input,select{width:50%}
+select{width:50%}
+input{width:18%}
 input[type=checkbox]{width:5%;zoom:1.5}
 form{background-color: green;padding:3%}
 html {text-align: center;}
+input[type="radio"] {
+  margin-right: 0;
+}
+.radioDiv {text-align: left;padding-left:30%}
+.checkboxDiv {text-align: left;padding-left:40%}
